# play-mpi

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  fibonacci.c  main.c
